# abstract-mon

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  effect_classes_analysis.md  implementation_abilities.md  implementation_items.md  implementation_moves.md  pyproject.toml
.github/workflows/: ci.yml
constants/: accuracy_stage_multipliers.py  move_category.py  move_modifier_type.py  move_tag.py  player_identifier.py  standard_natures.py  stat_stage_multipliers.py  stats.py  status.py  trainer_side_identifier.py  type_chart.py  typechart.py  types.py
data/: abilities.json  items.json  moves.json
data/raw_data/: merge_data.py  move_effect_prose.csv  processed_abilities.csv  processed_items.csv  processed_move_effects.csv  processed_moves.csv
items/: life_orb.py
model/: ability.py  battle.py  battle_state.py  damage_calc.py  effect.py  game_action.py  item.py  modifier.py  move.py  move_modifier.py  nature.py  pokemon.py  stat_container.py  terrain.py  trainer.py  weather.py
model/Moves/: tackle.py
model/abilities/: intimidate.py  lazy.py
model/effects/: __init__.py  chance_effect.py  damage_self.py  do_damage.py  inflict_status.py  modify_stat_stage.py  multiply_damage.py
model/moves/: leaf_blade.py  tackle.py
model/pokemons/: donkey.py  shrek.py
moves/: __init__.py  flamethrower.py  poison_fang.py  pound.py  quick_attack.py  shadow_ball.py  surf.py  thunder_punch.py
tests/constant/: test_type_chart_completeness.py
tests/effects/: test_chance_effect.py
tests/factories/: ability_factory.py  battle_factory.py  item_factory.py  move_factory.py  pokemon_factory.py  trainer_factory.py
tests/items/: test_life_orb.py
tests/model/: test_battle_integration.py  test_stat_container.py
tests/moves/: __init__.py  test_flamethrower.py  test_poison_fang.py  test_pound.py  test_quick_attack.py  test_shadow_ball.py  test_thunder_punch.py  test_type_effectiveness.py
util/: calculate.py  damage_calc.py  math_util.py  setting_utils.py  stat_calc_util.py  stat_stage_util.py
