[project]
dependencies = [
  "pydantic>=2.11.7"
]

[project.optional-dependencies]
dev = [
  "autoflake>=2.3.1",
  "black>=25.1.0",
  "flake8>=7.3.0",
  "mypy>=1.17.0",
  "pytest"
]

[tool.flake8]
extend-ignore = ["INP001"]

[tool.mypy]
disable_error_code = [
  # Do not require stubs for every module.
  "import",
  # We're seeing some very odd errors with this enabled.
  "name-defined",
  # Flag type errors at definition, not call sites.
  "no-untyped-call"
]
enable_error_code = [
  # Always specify which type error we're ignoring.
  "ignore-without-code"
]
exclude = '^\.venv/'
files = "."
local_partial_types = true
mypy_path = "mypy_stubs"
no_implicit_reexport = false
plugins = [
  "pydantic.mypy"
]
pretty = true
strict = true
strict_optional = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = false
module = [
  "django_scim"
]

[tool.pydocstyle]
inherit = false
select = [
  "D201",
  "D202",
  "D206",
  "D207",
  "D208",
  "D209",
  "D210",
  "D211",
  "D300",
  "D301",
  "D302"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sophium.settings"
addopts = "-Wignore"
python_classes = ""
python_functions = ""

[tool.setuptools.packages.find]
exclude = ["tests"]
include = ["*"]
